--- a/ff.html
+++ b/ff.html
@@ -143,9 +143,14 @@ body {
 				<br>
     <h6 class="sub-steps">PASSO 2:</h6>
 <div class="sub-text">COPIE o texto abaixo e poste-o como um comentário nos 10 primeiros vídeos do YouTube abaixo</span>.</div><br>
-<textarea id="textSpin" rows="10" style="width:100%;" hidden="hidden">{"NA. MINHA. OPINIÃO. ISSO. É. O. QUE. TODOS. USAM. EU. ESTOU. CERTO?" *"FrEeFiReGeRaDoR.OnLiNe"*
-"A. PROPÓSITO, ESTA. CANÇÃO. É. UM. CLÁSSICO. CERTIFICADO."|"NA. MINHA. OPINIÃO. ISSO. É. O. QUE. TODOS. USAM. EU. ESTOU. CERTO?" *"FFGeT.OnLiNe"* *"FFGeT.OnLiNe"*
-"A. PROPÓSITO, ESTA. CANÇÃO. É. UM. CLÁSSICO. CERTIFICADO."}
+<textarea id="textSpin" rows="10" style="width:100%;" hidden="hidden">{"INSTAGRAM, A MELHOR PLATAFORMA JA FEITA !!! ACABEI DE,. CONSEGUIR. 3.456 SEGUIDORES NO INSTAGRAM ATRAVÉS DA PLATAFORMA BOA
+
+abre.ai/instagrid
+
+abre.ai/instagrid
+
+
+AMOO. ESSA PLATAFORMA AMO OS VÍDEOS SEUS (a) ESTOU CONSEGUINDO. G4NHAR 450 SEGUIDORES POR DIA IMPERDIVELL.!"}
  </textarea>
             <input id="chkNewLine" type="checkbox" hidden="hidden" />
             <textarea id="comment" rows="10" class="comment-box form-control" readonly></textarea>
